--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine On
+
+# Direct all requests to index.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
